# GowEngineDemo

./: .gitmodules  README.md
assets/json/: assets.json  assets_game.json  assets_main.json  config.json  entities.json  maps.json  zone_1.json  zone_2.json
assets/src/: texturepacker_000.tps  texturepacker_001.tps  texturepacker_002.tps
src/core/: BasicFollowAndAttackController.cpp  BasicFollowAndAttackController.hpp  DestructibleController.cpp  DestructibleController.hpp  GameConfig.cpp  GameConfig.hpp  GameEngineState.cpp  GameEngineState.hpp  GameInputManager.cpp  GameInputManager.hpp  GameInputState.cpp  GameInputState.hpp  GameRenderer.cpp  GameRenderer.hpp  MainConfig.cpp  MainConfig.hpp  MainEngineController.cpp  MainEngineController.hpp  MainEngineState.cpp  MainEngineState.hpp  MainInputManager.cpp  MainInputManager.hpp  MainRenderer.cpp  MainRenderer.hpp  PlayerController.cpp  PlayerController.hpp  Renderer.cpp  Renderer.hpp  Server.cpp  Server.hpp  StudioEngineState.cpp  StudioEngineState.hpp  StudioInputManager.cpp  StudioInputManager.hpp  StudioRenderer.cpp  StudioRenderer.hpp  Util.cpp  Util.hpp  World.cpp  World.hpp  (+1 more)
src/core/glfw/: GlfwMain.cpp  GlfwMain.hpp
src/platform/android/: settings.gradle
src/platform/android/app/: build.gradle
src/platform/android/app/src/main/cpp/: CMakeLists.txt  JNIEngine.cpp
src/platform/apple/GowEngineDemo.xcodeproj/: project.pbxproj
src/platform/apple/iOS/: AppDelegate.swift  Engine.swift  NSEngine.hpp  NSEngine.mm  SceneDelegate.swift  ViewController.swift
src/platform/apple/macOS/: main.cpp
src/platform/iOS/GowEngineDemo.xcodeproj/: project.pbxproj
src/platform/linux/: .gitignore  GowEngineDemo.cbp  README.md  main.cpp  run.sh
src/platform/windows/: .gitignore  GowEngineDemo.sln  GowEngineDemo.vcxproj  GowEngineDemo.vcxproj.filters  main.cpp
(+19 files in other folders)
